tests/snapshots/tests__pep-12.snap
---
source: tests/tests.rs
expression: "parse(\"name; os_name=='a' and os_name=='b' or os_name=='c'\")"
---
Ok(
    Dependency {
        name: "name",
        extras: [],
        spec: None,
        marker: Some(
            Or(
                And(
                    Operator(
                        OsName,
                        Comparator(
                            Eq,
                        ),
                        String(
                            "a",
                        ),
                    ),
                    Operator(
                        OsName,
                        Comparator(
                            Eq,
                        ),
                        String(
                            "b",
                        ),
                    ),
                ),
                Operator(
                    OsName,
                    Comparator(
                        Eq,
                    ),
                    String(
                        "c",
                    ),
                ),
            ),
        ),
    },
)
