tests/snapshots/tests__pep-15.snap
---
source: tests/tests.rs
expression: "parse(\"name; (os_name=='a' or os_name=='b') and os_name=='c'\")"
---
Ok(
    Dependency {
        name: "name",
        extras: [],
        spec: None,
        marker: Some(
            And(
                Or(
                    Operator(
                        OsName,
                        Comparator(
                            Eq,
                        ),
                        String(
                            "a",
                        ),
                    ),
                    Operator(
                        OsName,
                        Comparator(
                            Eq,
                        ),
                        String(
                            "b",
                        ),
                    ),
                ),
                Operator(
                    OsName,
                    Comparator(
                        Eq,
                    ),
                    String(
                        "c",
                    ),
                ),
            ),
        ),
    },
)
