tests/snapshots/tests__pep-9.snap
---
source: tests/tests.rs
expression: "parse(\"name [fred,bar] @ http://foo.com ; python_version=='3.7'\")"
---
Ok(
    Dependency {
        name: "name",
        extras: [
            "fred",
            "bar",
        ],
        spec: Some(
            Url(
                "http://foo.com",
            ),
        ),
        marker: Some(
            Operator(
                PythonVersion,
                Comparator(
                    Eq,
                ),
                String(
                    "3.7",
                ),
            ),
        ),
    },
)
